[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
axum = "0.7.7"
dotenv = "0.15.0"
serde = "1.0.210"
sqlx = { version = "0.8.2", features = ["runtime-tokio-native-tls", "sqlite"] }
tokio = { version = "1.40.0", features = ["full"] }
shellexpand = "3.1.0"
secret_hitler = { path = "../anchor-program/programs/secret-hitler" }
bincode = "1.3.3"
serde_json = "1.0.128"
base64 = "0.22.1"
solana-sdk = "1.18.23"
solana-client = "1.18.23"
anchor-lang = "0.30.1"
rand = "0.8.5"

[patch.crates-io.aes-gcm-siv]
git = "https://github.com/RustCrypto/AEADs"
rev = "6105d7a5591aefa646a95d12b5e8d3f55a9214ef"
[patch.crates-io.curve25519-dalek]
git = "https://github.com/solana-labs/curve25519-dalek.git"
rev = "c14774464c4d38de553c6ef2f48a10982c1b4801"
